--- a/package.json
+++ b/package.json
@@ -3,22 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "6.0.2",
-    "node-sass": "4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "7.0.3",
-    "react-router-dom": "5.0.0",
-    "redux": "4.0.1",
-    "redux-logger": "3.0.6",
-    "redux-persist": "5.10.0",
-    "reselect": "4.0.0"
-  },
-  "devDependencies": {
-    "react-scripts": "3.0.0"
-  },
-  "resolutions": {
-    "babel-jest": "24.7.1"
+    "firebase": "^7.2.1",
+    "node-sass": "^4.12.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
